# easy-screenshare

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: build.yml
.wrangler/cache/: wrangler-account.json
backend/: package-lock.json  package.json  schema.sql  wrangler.toml
backend/src/: index.ts  relay_room.ts  viewer_html.ts
client/: Cargo.toml
client/src/: app.rs  fallback.rs  lib.rs  main.rs  render.rs  signaling.rs
client/src/capture/: audio.rs  mod.rs  video.rs
client/src/webrtc_client/: codec.rs  mod.rs  sender.rs  viewer.rs
client/tests/: codec.rs  downscale.rs  fallback_wire.rs  quality_presets.rs  signaling_ws_url.rs
