[package]
name = "screenshare"
version = "0.1.0"
edition = "2021"
description = "Install-free screen sharing client with Cloudflare Worker backend"

[[bin]]
name = "screenshare"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
image = "0.25"
qrcode = "0.14"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
parking_lot = "0.12"
bytes = "1"
socket2 = "0.5"

cpal = "0.15"
webrtc = "0.11"
vpx-encode = "0.5"
env-libvpx-sys = { version = "5.1", features = ["generate"] }
opus = "0.3"

# scap covers screen capture on macOS and Linux. On Windows we go direct to
# windows-capture — scap 0.0.8's Windows wrapper silently ignored
# `output_resolution` (forcing client-side downscaling) and was pinned to an
# old windows-capture release blocking us from upstream fixes.
[target.'cfg(not(target_os = "windows"))'.dependencies]
scap = "0.0.8"

[target.'cfg(target_os = "windows")'.dependencies]
# Going direct lets us track latest and gives us cleaner ownership over the
# capture surface (handler trait, CaptureControl for shutdown, real frame
# metadata). Audio isn't part of this crate's capture path — we keep wasapi
# for loopback audio.
windows-capture = "2"
# cpal opens the default render device as an input but never sets
# AUDCLNT_STREAMFLAGS_LOOPBACK, so callbacks never fire and we get no audio.
# wasapi exposes the loopback flag directly via Direction::Capture on a
# Render-direction device.
wasapi = "0.15"
# SetThreadPriority — used to drop our capture/encoder threads to
# BELOW_NORMAL so a game sharing the same machine keeps scheduler
# priority. Without this, our 30 fps encode loop competes directly with
# the game's render thread and both drop frames.
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
# scap already wraps ScreenCaptureKit including system audio on macOS 13+.
# Keeping this section as a hook in case we need direct access later.

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
