[package]
name = "screenshare"
version = "0.1.0"
edition = "2021"
description = "Install-free screen sharing client with Cloudflare Worker backend"

[[bin]]
name = "screenshare"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
image = "0.25"
qrcode = "0.14"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
parking_lot = "0.12"
bytes = "1"
socket2 = "0.5"

webrtc = "0.11"
vpx-encode = "0.5"
env-libvpx-sys = { version = "5.1", features = ["generate"] }
opus = "0.3"

# Linux is the only target still routed through scap. macOS uses
# `screencapturekit` directly; Windows uses `windows-capture` + `wasapi`
# directly. scap 0.0.8 has produced a series of sharp-edged bugs (mac
# empty-display-list panic, Windows resolution ignored, pinned to an old
# windows-capture, deprecated `Capturer::new` with no working
# replacement), so we've moved every platform off it that we ship in CI.
# Linux stays on scap as a stopgap — CI doesn't build Linux artifacts.
[target.'cfg(target_os = "linux")'.dependencies]
scap = "0.0.8"
# cpal handles audio capture on Linux (ALSA/PulseAudio). Windows uses
# wasapi loopback directly; macOS pulls system audio from the SCStream.
cpal = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
# Going direct lets us track latest and gives us cleaner ownership over the
# capture surface (handler trait, CaptureControl for shutdown, real frame
# metadata). Audio isn't part of this crate's capture path — we keep wasapi
# for loopback audio.
windows-capture = "2"
# cpal opens the default render device as an input but never sets
# AUDCLNT_STREAMFLAGS_LOOPBACK, so callbacks never fire and we get no audio.
# wasapi exposes the loopback flag directly via Direction::Capture on a
# Render-direction device.
wasapi = "0.15"
# SetThreadPriority — used to drop our capture/encoder threads to
# BELOW_NORMAL so a game sharing the same machine keeps scheduler
# priority. Without this, our 30 fps encode loop competes directly with
# the game's render thread and both drop frames.
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Direct ScreenCaptureKit bindings. Replaces scap on macOS — the same
# stream emits both video frames and system audio via separate output
# handlers, which closes the long-standing "macOS sender's audio is the
# mic, not the speakers" gap (cpal couldn't tap render-side audio).
#
# Pinned to the 1.x series of `screencapturekit-rs` (last release: 1.5.4).
# Versions 3.x and later switched to the doom-fish "apple suite" and pull
# `apple-metal`, whose Swift bridge references macOS 26 SDK symbols
# (`MTLSamplerReductionMode`, `reactiveMaskTexture`) that don't exist in
# Xcode 15's macOS 14 SDK — including the macOS 14 runner CI uses, so
# 3.x+ doesn't build for us at all. 1.x is the last upstream that still
# compiles on Xcode 15.
# macos_13_0 unlocks SCStreamConfiguration.set_captures_audio /
# set_sample_rate / set_channel_count.
screencapturekit = { version = "1.5", features = ["macos_13_0"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
